--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-repeat: no-repeat; background-size: auto;}
+body {background-repeat: no-repeat; background-size: cover;}
 .ba {background-color: grey;}
 .bb {background-color: aqua;}
 .one {color:aqua;}
