--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ td {color: aqua;}
 .ta {color: aqua;}
 .mg {height: 75px;}
 .tc {font-size: xx-large;}
-.bodya {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; background-size: auto;}
+.bodya {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; background-size: cover;}
 h1 {color:lime; border-style: solid; border-color: yellow;}
 .forma {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 h2 {color: yellow; border-style: solid; border-color: lime;}
