--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+body {background-size: cover;}
 .ba {background-color: grey;}
 .bb {background-color: aqua;}
 .one {color:aqua;}
@@ -19,7 +20,7 @@ td {color: aqua;}
 .ta {color: aqua;}
 .mg {height: 75px;}
 .tc {font-size: xx-large;}
-.bodya {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; background-size: cover;}
+.bodya {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
 h1 {color:lime; border-style: solid; border-color: yellow;}
 .forma {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 h2 {color: yellow; border-style: solid; border-color: lime;}
