--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ td {color: aqua;}
 .ha {color: blue;}
 .ta {color: aqua;}
 .mg {height: 75px;}
-.tc {font-size: xx-large;}
+.tc {font-size: medium;}
 .bodya {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
 h1 {color:lime; border-style: solid; border-color: yellow;}
 .forma {color: aqua; font-size: large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
