--- a/style.css
+++ b/style.css
@@ -26,4 +26,4 @@ h1 {color:lime; border-style: solid; border-color: yellow;}
 h2 {color: yellow; border-style: solid; border-color: lime;}
 .td1 {color: gold;}
 .td2 {color: silver;}
-.td3 {color: brown;}
+.td3 {color: rgb(126, 63, 11);}
