--- a/style.css
+++ b/style.css
@@ -27,3 +27,4 @@ h2 {color: yellow; border-style: solid; border-color: lime;}
 .td1 {color: gold;}
 .td2 {color: silver;}
 .td3 {color: rgb(126, 63, 11);}
+table {text-align: center;}
